--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,17 @@
 appdirs==1.4.3
 APScheduler==3.6.3
+apturl==0.5.2
 autopep8==1.5.7
 blinker==1.4
+Brlapi==0.7.0
 cachetools==4.2.2
 certifi==2019.11.28
 chardet==3.0.4
 Click==7.0
 colorama==0.4.3
+command-not-found==0.3
 cryptography==2.8
+cupshelpers==1.0
 dbus-python==1.2.16
 defer==1.0.6
 distlib==0.3.0
